vuepress热编译浏览器不自动更新

--- a/docs/vue/01-vue3基础笔记.md
+++ b/docs/vue/01-vue3基础笔记.md
@@ -6,7 +6,7 @@
 
 ![image-20220212222422186](docs/media/image-20220212222422186.png)
 
-为什么要学vue3: 
+为什么要学vue3,理由如下: 
 
 1. Vue 是国内最火的前端框架
 2. Vue 3 于 2022 年 2 月 7 日星期一成为新的默认版本！
