--- a/docs/note/problem/常见问题总结.md
+++ b/docs/note/problem/常见问题总结.md
@@ -670,14 +670,68 @@ import {test1,test2} from './a.js'
 ```
 
  - 如何引入在线iconfont
-![在这里插入图片描述](https://img-blog.csdnimg.cn/4a05bca32f1c41af8f697de089016dbe.png)
- -   ### 关于组件内部插槽样式如何编写的问题?
- ![可以直接把组件内部的样式写在最外层](https://img-blog.csdnimg.cn/88500584c0494aacbfedc602b242370d.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)
- -  ### 如果chrome控制台审查样式的时候，发现有一些样式并非自己写的，而是写着user agent style
+  ![在这里插入图片描述](https://img-blog.csdnimg.cn/4a05bca32f1c41af8f697de089016dbe.png)
 
-	[user agent stylesheet如何修改？](https://blog.csdn.net/hello_hxx/article/details/80996398)
- -   ### css 样式选择器
- ![在这里插入图片描述](https://img-blog.csdnimg.cn/a31cadb7a7684474b5d1310bdbdc88a3.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)
+ - 父组件改变子组件样式：
+
+  **（1）第一种方式：自定义element-ui样式**
+
+  现在我们来说说怎么覆盖 element-ui 样式。由于 element-ui 的样式我们是在全局引入的，所以你想在某个页面里面覆盖它的样式就不能加 scoped，但你又想只覆盖这个页面的 element 样式，你就可在它的父级加一个 class，用命名空间来解决问题。
+
+  ```js
+  .article-page {
+    /* 你的命名空间 */
+    .el-tag {
+      /* element-ui 元素*/
+      margin-right: 0px;
+    }
+  }
+  ```
+
+  **（2）第二种方式：深度选择器**
+
+  当你子组件使用了 `scoped` 但在父组件又想修改子组件的样式可以 通过 `>>>` 来实现：
+
+  ```css
+  <style scoped>
+  .a >>> .b { /* ... */ }
+  </style>
+  ```
+
+​	将会编译成：
+
+```css
+    .a[data-v-f3f3eg9] .b {
+      /* ... */
+    }
+```
+
+---
+
+​		如果你使用了一些预处理的东西，如 `sass` 你可以通过 `/deep/` 来代替 `>>>` 实现想要的效果。
+
+​        所以你想覆盖某个特定页面 `element` 的 button 的样式，你可以这样做：
+
+```css
+.xxx-container >>> .el-button{
+  xxxx
+}
+```
+
+
+
+
+
+ - ### 关于组件内部插槽样式如何编写的问题?
+    ![可以直接把组件内部的样式写在最外层](https://img-blog.csdnimg.cn/88500584c0494aacbfedc602b242370d.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)
+
+ - ### 如果chrome控制台审查样式的时候，发现有一些样式并非自己写的，而是写着user agent style
+
+  [user agent stylesheet如何修改？](https://blog.csdn.net/hello_hxx/article/details/80996398)
+
+ - ### css 样式选择器
+    ![在这里插入图片描述](https://img-blog.csdnimg.cn/a31cadb7a7684474b5d1310bdbdc88a3.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)
+
  - CSS字体图标 | 字体渐变如何实现？
 
 
@@ -691,7 +745,7 @@ background-image:-webkit-linear-gradient(bottom,red,#ff5f60,#f0c41b);
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/92197e98487f43baaf228e90ff24e589.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)
  -   ### 当内容超出盒子的宽度或者高度的时候，如何设置滚动条、滚动槽
  ![在这里插入图片描述](https://img-blog.csdnimg.cn/0f3af12f579c4cb3bcee1cacfcf802f9.png)
- ![在这里插入图片描述](https://img-blog.csdnimg.cn/8d13fe1e00144fceb28ceda1932ae28d.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)![在这里插入图片描述](https://img-blog.csdnimg.cn/ebf9450d43494329abc5278d5285b82c.png)
+  ![在这里插入图片描述](https://img-blog.csdnimg.cn/8d13fe1e00144fceb28ceda1932ae28d.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)![在这里插入图片描述](https://img-blog.csdnimg.cn/ebf9450d43494329abc5278d5285b82c.png)
  -  ### 如何将页面手动滚动到最顶部？
  通过scrollTop即可实现，获取dom元素，然后修改其`scrollTop = 0;`
 ## 2、web自适应方案
