--- a/docs/note/design/设计模式笔记.md
+++ b/docs/note/design/设计模式笔记.md
@@ -14,7 +14,7 @@ tags:
 
 ### 多态
 
-实际含义：统一操作作用于不同的对象上面，可以产生不同的解释和不同的执行结果。换句话说，给不同的对象发送同一消息的时候，这些对象会根据这个消息分别给出不同的反馈.
+实际含义:统一操作作用于不同的对象上面，可以产生不同的解释和不同的执行结果。换句话说，给不同的对象发送同一消息的时候，这些对象会根据这个消息分别给出不同的反馈.
 
 > **举个例子：** 主人让鸡、鸭分别发出叫声，但是各自发出的声音不同
 
