--- a/docs/note/problem/常见问题总结.md
+++ b/docs/note/problem/常见问题总结.md
@@ -100,6 +100,17 @@ let obj2 = {a:1}if (obj2.hasOwnProperty("a")){
 }
 ```
 
+- 方法4：
+
+```js
+     var obj={"a11":"1",1000:"a",false:"3"};
+     //格式:(变量 in  对象)
+     //注意:当对象是一个集合是,变量代表的是对象的属性
+     alert("a11" in obj);//输出:true
+```
+
+
+
 ## 3、关于数组一些常用方法总结
 
  - map方法
@@ -283,6 +294,36 @@ Array.prototype.map=function(fn){
   }
 ```
 
+- 数组slice方法
+
+  > `slice(start,end)`方法可从已有数组中返回选定的元素，返回一个新数组，包含从`start`到`end`( 不包含该元素 )的数组元素 -
+  >
+  > 注意：不会改变原数组
+
+ 		`slice(1,3)`
+
+```js
+    var array = [1, 2, 3, 4, 5];
+    var array1 = array.slice(1, 3);
+    // array [1, 2, 3, 4, 5]
+    // array1 [2, 3]
+
+```
+
+​		`slice(1)`
+
+```js
+    var array = [1, 2, 3, 4, 5];
+    var array1 = array.slice(1);
+    // array [1, 2, 3, 4, 5]
+    // array1 [2, 3, 4, 5]
+
+```
+
+
+
+
+
 ## 4、8个常用的Javascript对象方法
 
  - object.is
@@ -332,8 +373,6 @@ console.log(returnedTarget);
 注意：如果源对象中的属性具有相同的键，则目标对象中的属性会被源中的属性覆盖。较晚来源的属性会覆盖较早来源的属性。
 
  - Object.entries()
-
- 
 
 > Object.entries() 方法返回给定对象自己的可枚举字符串键属性 [key, value] 对的数组。
 
@@ -670,7 +709,7 @@ import {test1,test2} from './a.js'
 ```
 
  - 如何引入在线iconfont
-  ![在这里插入图片描述](https://img-blog.csdnimg.cn/4a05bca32f1c41af8f697de089016dbe.png)
+    ![在这里插入图片描述](https://img-blog.csdnimg.cn/4a05bca32f1c41af8f697de089016dbe.png)
 
  - 父组件改变子组件样式：
 
@@ -745,7 +784,7 @@ background-image:-webkit-linear-gradient(bottom,red,#ff5f60,#f0c41b);
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/92197e98487f43baaf228e90ff24e589.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)
  -   ### 当内容超出盒子的宽度或者高度的时候，如何设置滚动条、滚动槽
  ![在这里插入图片描述](https://img-blog.csdnimg.cn/0f3af12f579c4cb3bcee1cacfcf802f9.png)
-  ![在这里插入图片描述](https://img-blog.csdnimg.cn/8d13fe1e00144fceb28ceda1932ae28d.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)![在这里插入图片描述](https://img-blog.csdnimg.cn/ebf9450d43494329abc5278d5285b82c.png)
+    ![在这里插入图片描述](https://img-blog.csdnimg.cn/8d13fe1e00144fceb28ceda1932ae28d.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)![在这里插入图片描述](https://img-blog.csdnimg.cn/ebf9450d43494329abc5278d5285b82c.png)
  -  ### 如何将页面手动滚动到最顶部？
  通过scrollTop即可实现，获取dom元素，然后修改其`scrollTop = 0;`
 ## 2、web自适应方案
