--- a/docs/note/javascript/学习笔记.md
+++ b/docs/note/javascript/学习笔记.md
@@ -393,7 +393,20 @@ const symbolTag = '[object Symbol]';
 
 
 
+### 第三方深拷贝库
 
+该函数库也有提供_.cloneDeep用来做 Deep Copy（lodash是一个不错的第三方开源库，有好多不错的函数，也可以看具体的实现源码）
+
+```js
+var _ = require('lodash');
+var obj1 = {
+    a: 1,
+    b: { f: { g: 1 } },
+    c: [1, 2, 3]
+};
+var obj2 = _.cloneDeep(obj1);
+console.log(obj1.b.f === obj2.b.f);
+```
 
 
 
