防抖节流笔记

--- a/docs/note/javascript/学习笔记.md
+++ b/docs/note/javascript/学习笔记.md
@@ -410,6 +410,63 @@ console.log(obj1.b.f === obj2.b.f);
 
 
 
+## 防抖 | 节流
+
+### 什么叫函数防抖
+
+**概念**：函数防抖（debounce），就是指触发事件后，在 n 秒内函数只能执行一次，如果触发事件后在 n 秒内又触发了事件，则会重新计算函数延执行时间。
+
+> 举个栗子，坐电梯的时候，如果电梯检测到有人进来（触发事件），就会多等待 10 秒，此时如果又有人进来（10秒之内重复触发事件），那么电梯就会再多等待 10 秒。在上述例子中，电梯在检测到有人进入 10 秒钟之后，才会关闭电梯门开始运行，因此，“函数防抖”的关键在于，在 **一个事件** 发生 **一定时间** 之后，才执行 **特定动作**。
+
+```vue
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>
+        手机：<input type="text"> 
+        <input type="submit" class="sumbit" id="input">
+    </div>
+</body>
+<script>
+    let btn  = document.querySelector('#input')
+    btn.addEventListener('click',debounce(sumbit),false)
+
+    function sumbit(e) {
+        console.log(this,'指向btn这个dom元素');
+    }
+    // 防抖函数
+    function debounce(fn,delayTime) { 
+        /* 这里的的函数因为是定义在全局下的，通过function声明，所以这里的this指向的是windows */
+        var timer = null
+        return function () {  
+             /* 
+                这里的function因为作为返回值，所以其函数作用域还是属于按钮的点击事件那里
+                故这里的this指向的是按钮本身，也就是这个btn对应的dom元素     */
+            if(timer){
+                clearTimeout(timer)
+            }
+            timer =  setTimeout(() => {
+                /* 
+                  由于最后在sumbit中的this需要指向btn
+                  所以通过debounce调用这个sumbit后，里面的this需要保持不变，所以需要通过apply指向箭头函数()=>{}上一级的this变量   */
+              
+                fn.apply(this)
+
+            }, delayTime);
+        }
+     }
+</script>
+</html>
+```
+
+**拓展**：对于函数内部的this指向问题，函数最后是谁调用的，则内部的this就指向谁
+
 
 
 
