--- a/docs/note/javascript/学习笔记.md
+++ b/docs/note/javascript/学习笔记.md
@@ -473,6 +473,50 @@ console.log(obj1.b.f === obj2.b.f);
 
 
 
+## 闭包及其应用
+
+什么是[闭包]( https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Closures)？我们来看一下官方对于闭包的解释吧：
+
+一个函数和对其周围状态（**lexical environment，词法环境**）的引用捆绑在一起（或者说函数被引用包围），这样的组合就是**闭包**（**closure**）。也就是说，闭包让你可以在一个内层函数中访问到其外层函数的作用域。在 JavaScript 中，每当创建一个函数，闭包就会在函数创建的同时被创建出来
+
+### 词法作用域
+
+```js
+function init() {
+  var name = "Mozilla"; // name 是一个被 init 创建的局部变量
+  function displayName() { // displayName() 是内部函数，一个闭包
+      alert(name); // 使用了父函数中声明的变量
+  }
+  displayName();
+}
+init();
+```
+
+`init()` 创建了一个局部变量 `name` 和一个名为 `displayName()` 的函数。`displayName()` 是定义在 `init()` 里的内部函数，并且仅在 `init()` 函数体内可用。请注意，`displayName()` 没有自己的局部变量。然而，因为它可以访问到外部函数的变量，所以 `displayName()` 可以使用父函数 `init()` 中声明的变量 `name` 。
+
+### 举个例子（闭包）
+
+```js
+function makeFunc() {
+    var name = "Mozilla";
+    function displayName() {
+        alert(name);
+    }
+    return displayName;
+}
+
+var myFunc = makeFunc();
+myFunc();
+```
+
+运行这段代码的效果和之前 `init()` 函数的示例完全一样。其中不同的地方（也是有意思的地方）在于内部函数 `displayName()` *在执行前*，从外部函数返回。
+
+第一眼看上去，也许不能直观地看出这段代码能够正常运行。在一些编程语言中，一个函数中的局部变量仅存在于此函数的执行期间。一旦 `makeFunc()` 执行完毕，你可能会认为 `name` 变量将不能再被访问。然而，因为代码仍按预期运行，所以在 JavaScript 中情况显然与此不同。
+
+原因在于，JavaScript中的函数会形成了闭包。 *闭包*是由函数以及声明该函数的词法环境组合而成的。该环境包含了这个闭包创建时作用域内的任何局部变量。在本例子中，`myFunc` 是执行 `makeFunc` 时创建的 `displayName` 函数实例的引用。`displayName` 的实例维持了一个对它的词法环境（变量 `name` 存在于其中）的引用。因此，当 `myFunc` 被调用时，变量 `name` 仍然可用，其值 `Mozilla` 就被传递到`alert`中。
+
+
+
 
 
 
