--- a/docs/note/javascript/学习笔记.md
+++ b/docs/note/javascript/学习笔记.md
@@ -515,11 +515,16 @@ myFunc();
 
 原因在于，JavaScript中的函数会形成了闭包。 *闭包*是由函数以及声明该函数的词法环境组合而成的。该环境包含了这个闭包创建时作用域内的任何局部变量。在本例子中，`myFunc` 是执行 `makeFunc` 时创建的 `displayName` 函数实例的引用。`displayName` 的实例维持了一个对它的词法环境（变量 `name` 存在于其中）的引用。因此，当 `myFunc` 被调用时，变量 `name` 仍然可用，其值 `Mozilla` 就被传递到`alert`中。
 
+### JS堆栈内存释放
 
+- 堆内存释放：将引用类型的空间地址变量赋值成 `null`，或没有变量占用堆内存了浏览器就会释放掉这个地址
+- 栈内存：提供代码执行的环境和存储基本类型值。
 
+- 栈内存释放：一般当函数执行完后函数的私有作用域就会被释放掉。
 
-
-
+> **但栈内存的释放也有特殊情况：① 函数执行完，但是函数的私有作用域内有内容被栈外的变量还在使用的，栈内存就不能释放里面的基本值也就不会被释放。② 全局下的栈内存只有页面被关闭的时候才会被释放**
+>
+> https://juejin.cn/post/6937469222251560990
 
 
 
