--- a/docs/note/problem/常见问题总结.md
+++ b/docs/note/problem/常见问题总结.md
@@ -659,15 +659,459 @@ replace
 
 
 
+## JSON使用注意
+
+https://juejin.cn/post/6844903511222648845
+
+JavaScript 和 JSON 对转义字符的处理方式不同，导致了难以发现的 bug。JSON 遇到不能转义的字符直接抛出异常，而 JavaScript 遇到不能转义的字符直接解释为对应的非转义版本
+
+
+
+## 正则表达式
+
+正则表达式一直是困扰很多程序员的一门技术，当然也包括曾经的我。大多数时候我们在开发过程中要用到某些正则表达式的时候，都会打开谷歌或百度直接搜索然后拷贝粘贴。当下一次再遇到相同问题的时候，同样的场景又再来一遍。作为一门用途很广的技术，我相信深入理解正则表达式并能融会贯通是值得的。所以，希望这篇文章能帮助大家理清思路，搞懂正则表达式各种符号之间的内在联系，形成知识体系，当下次再遇到正则表达式的时候可以不借助搜索引擎，自己解决。
+
+### 正则表达式到底是什么
+
+正则表达式(Regular Expression)其实就是一门工具，**目的**是为了字符串模式匹配，从而实现搜索和替换功能。它起源于上个20世纪50年代科学家在数学领域做的一些研究工作，后来才被引入到计算机领域中。从它的命名我们可以知道，它是一种**用来描述规则的表达式**。而它的底层原理也十分简单，就是使用状态机的思想进行模式匹配。大家可以利用[regexper.com](https://link.juejin.cn?target=https%3A%2F%2Fregexper.com%2F)这个工具很好地可视化自己写的正则表达式:
+
+如`/\d\w+/`这个正则生成的状态机图:
+
+
+
+![img](https://p1-jj.byteimg.com/tos-cn-i-t2oaga2asx/gold-user-assets/2019/5/16/16abe9d9357f691c~tplv-t2oaga2asx-zoom-in-crop-mark:1304:0:0:0.awebp)
+
+
+
+对于具体的算法实现，大家如果感兴趣可以阅读《算法导论》。
+
+###  从字符出发
+
+我们学习一个系统化的知识，一定要从其基础构成来了解。正则表达式的基本**组成元素**可以分为：
+
+**字符和元字符**。字符很好理解，就是基础的计算机字符编码，通常正则表达式里面使用的就是`数字、英文字母。而元字符`，也被称为特殊字符，是一些用来表示特殊语义的字符。如`^表示非`，`|表示或`等。利用这些元字符，才能构造出强大的表达式模式(pattern)。接下来，我们就来从这些基本单位出发，来学习一下如何构建正则表达式。
+
+###  单个字符
+
+最简单的正则表达式可以由简单的数字和字母组成，没有特殊的语义，纯粹就是一一对应的关系。如想在'apple'这个单词里找到‘a'这个字符，就直接用`/a/`这个正则就可以了。
+
+但是如果想要匹配特殊字符的话，就得请出我们第一个元字符**`\`**， 它是转义字符字符，顾名思义，就是让其后续的字符失去其本来的含义。举个例子：
+
+我想匹配`*`这个符号，由于`*`这个符号本身是个特殊字符，所以我要利用转义元字符`\`来让它失去其本来的含义：
+
+```js
+/\*/
+```
+
+如果本来这个字符不是特殊字符，使用转义符号就会让它拥有特殊的含义。我们常常需要匹配一些特殊字符，比如空格，制表符，回车，换行等, 而这些就需要我们使用转义字符来匹配。为了便于记忆，我整理了下面这个表格，并附上记忆方式：
+
+| 特殊字符   | 正则表达式 | 记忆方式                                     |
+| ---------- | ---------- | -------------------------------------------- |
+| 换行符     | \n         | **n**ew line                                 |
+| 换页符     | \f         | **f**orm feed                                |
+| 回车符     | \r         | **r**eturn                                   |
+| 空白符     | \s         | **s**pace                                    |
+| 制表符     | \t         | **t**ab                                      |
+| 垂直制表符 | \v         | **v**ertical tab                             |
+| 回退符     | [\b]       | **b**ackspace,之所以使用[]符号是避免和\b重复 |
+
+### 多个字符
+
+单个字符的映射关系是一对一的，即正则表达式的被用来筛选匹配的字符只有一个。而这显然是不够的，只要引入集合区间和通配符的方式就可以实现一对多的匹配了。
+
+在正则表达式里，集合的定义方式是使用中括号`[`和`]`。如`/[123]/`这个正则就能同时匹配1,2,3三个字符。那如果我想匹配所有的数字怎么办呢？从0写到9显然太过低效，所以元字符`-`就可以用来表示区间范围，利用`/[0-9]/`就能匹配所有的数字, `/[a-z]/`则可以匹配所有的英文小写字母。
+
+即便有了集合和区间的定义方式，如果要同时匹配多个字符也还是要一一列举，这是低效的。所以在正则表达式里衍生了一批用来同时匹配多个字符的简便正则表达式:
+
+| 匹配区间                                      | 正则表达式 | 记忆方式            |
+| --------------------------------------------- | ---------- | ------------------- |
+| 除了换行符之外的任何字符                      | .          | 句号,除了句子结束符 |
+| 单个数字, [0-9]                               | \d         | **d**igit           |
+| 除了[0-9]                                     | \D         | **not** **d**igit   |
+| 包括下划线在内的单个字符，[A-Za-z0-9_]        | \w         | **w**ord            |
+| 非单字字符                                    | \W         | **not** **w**ord    |
+| 匹配空白字符,包括空格、制表符、换页符和换行符 | \s         | **s**pace           |
+| 匹配非空白字符                                | \S         | **not** **s**pace   |
+
+### 循环与重复
+
+一对一和一对多的字符匹配都讲完了。接下来，就该介绍如何同时匹配多个字符。要实现多个字符的匹配我们只要多次循环，重复使用我们的之前的正则规则就可以了。那么根据循环次数的多与少，我们可以分为0次，1次，多次，特定次
+
+- **0 | 1**
+
+元字符`?`代表了匹配一个字符或0个字符。设想一下，如果你要匹配`color`和`colour`这两个单词，就需要同时保证`u`这个字符是否出现都能被匹配到。所以你的正则表达式应该是这样的：`/colou?r/`。
+
+- **>= 0**
+
+元字符`*`用来表示匹配0个字符或无数个字符。通常用来过滤某些可有可无的字符串。
+
+- **>= 1**
+
+元字符`+`适用于要匹配同个字符出现1次或多次的情况。
+
+- **特定次数**
+
+在某些情况下，我们需要匹配特定的重复次数，元字符`{`和`}`用来给重复匹配设置精确的区间范围。如'a'我想匹配3次,那么我就使用`/a{3}/`这个正则，或者说'a'我想匹配至少两次就是用`/a{2,}/`这个正则。
+
+以下是完整的语法：
+
+```
+- {x}: x次
+
+- {min, max}： 介于min次到max次之间
+
+- {min, }: 至少min次
+
+- {0, max}： 至多max次
+复制代码
+```
+
+由于这些元字符比较抽象，且容易混淆，所以我用了联想记忆的方式编了口诀能保证在用到的时候就能回忆起来。
+
+| 匹配规则    | 元字符          | 联想方式                                                     |
+| ----------- | --------------- | ------------------------------------------------------------ |
+| 0次或1次    | ?               | 且**问**,此事**有**还**无**                                  |
+| 0次或无数次 | *               | 宇宙洪荒,**辰宿**列张：宇宙伊始，从无到有，最后星宿布满星空  |
+| 1次或无数次 | +               | **一加**, +1                                                 |
+| 特定次数    | {x}, {min, max} | 可以想象成一个数轴，从一个点，到一个射线再到线段。min和max分别表示了左闭右闭区间的左界和右界 |
+
+### 位置边界
+
+上面我们把字符的匹配都介绍完了，接着我们还需要位置边界的匹配。在长文本字符串查找过程中，我们常常需要限制查询的位置。比如我只想在单词的开头结尾查找。
+
+- 单词边界
+
+单词是构成句子和文章的基本单位，一个常见的使用场景是把文章或句子中的特定单词找出来。如：
+
+```
+The cat scattered his food all over the room.
+复制代码
+```
+
+我想找到`cat`这个单词，但是如果只是使用`/cat/`这个正则，就会同时匹配到`cat`和`scattered`这两处文本。这时候我们就需要使用边界正则表达式`\b`，其中b是boundary的首字母。在正则引擎里它其实匹配的是能构成单词的字符(\w)和不能构成单词的字符(\W)中间的那个位置。
+
+上面的例子改写成`/\bcat\b/`这样就能匹配到`cat`这个单词了
+
+- 字符串边界
+
+匹配完单词，我们再来看一下一整个字符串的边界怎么匹配。元字符`^`用来匹配字符串的开头。而元字符`$`用来匹配字符串的末尾。注意的是在长文本里，如果要排除换行符的干扰，我们要使用多行模式。试着匹配`I am scq000`这个句子：
+
+```
+I am scq000.
+I am scq000.
+I am scq000.
+复制代码
+```
+
+我们可以使用`/^I am scq000\.$/m`这样的正则表达式，其实m是multiple line的首字母。正则里面的模式除了m外比较常用的还有i和g。前者的意思是忽略大小写，后者的意思是找到所有符合的匹配。
+
+最后，总结一下：
+
+| 边界和标志 | 正则表达式 | 记忆方式                              |
+| ---------- | ---------- | ------------------------------------- |
+| 单词边界   | \b         | **b**oundary                          |
+| 非单词边界 | \B         | **not** **b**oundary                  |
+| 字符串开头 | ^          | 小**头尖尖**那么大个                  |
+| 字符串结尾 | $          | **终结**者，美国科幻电影，美元符$     |
+| 多行模式   | m标志      | **m**ultiple of lines                 |
+| 忽略大小写 | i标志      | **i**gnore case, case-**i**nsensitive |
+| 全局模式   | g标志      | **g**lobal                            |
+
+### 子表达式
+
+字符匹配我们介绍的差不多了，更加高级的用法就得用到子表达式了。通过嵌套递归和自身引用可以让正则发挥更强大的功能。
+
+从简单到复杂的正则表达式演变通常要采用**分组、回溯引用和逻辑处理**的思想。利用这三种规则，可以推演出无限复杂的正则表达式。
+
+- 分组
+
+其中分组体现在：所有以`(`和`)`元字符所包含的正则表达式被分为一组，每一个分组都是一个**子表达式**，它也是构成高级正则表达式的基础。如果只是使用简单的`(regex)`匹配语法本质上和不分组是一样的，如果要发挥它强大的作用，往往要结合回溯引用的方式
+
+- 回溯引用
+
+所谓回溯引用（backreference）指的是模式的后面部分引用前面已经匹配到的子字符串。你可以把它想象成是变量，回溯引用的语法像`\1`,`\2`,....,其中`\1`表示引用的第一个子表达式，`\2`表示引用的第二个子表达式，以此类推。而`\0`则表示整个表达式。
+
+假设现在要在下面这个文本里匹配两个连续相同的单词，你要怎么做呢？
+
+```
+Hello what what is the first thing, and I am am scq000.
+复制代码
+```
+
+利用回溯引用，我们可以很容易地写出`\b(\w+)\s\1`这样的正则。
+
+回溯引用在替换字符串中十分常用，语法上有些许区别，用`$1`,`$2`...来引用要被替换的字符串。下面以js代码作演示：
+
+```
+var str = 'abc abc 123';
+str.replace(/(ab)c/g,'$1g');
+// 得到结果 'abg abg 123'
+复制代码
+```
+
+如果我们不想子表达式被引用，可以使用**非捕获**正则`(?:regex)`这样就可以避免浪费内存。
+
+```
+var str = 'scq000'.
+str.replace(/(scq00)(?:0)/, '$1,$2')
+// 返回scq00,$2
+// 由于使用了非捕获正则，所以第二个引用没有值，这里直接替换为$2
+复制代码
+```
+
+有时，我们需要限制回溯引用的适用范围。那么通过前向查找和后向查找就可以达到这个目的。
+
+### 前向查找
+
+前向查找(lookahead)是用来限制后缀的。凡是以`(?=regex)`包含的子表达式在匹配过程中都会用来限制前面的表达式的匹配。例如`happy happily`这两个单词，我想获得以`happ`开头的副词，那么就可以使用`happ(?=ily)`来匹配。如果我想过滤所有以`happ`开头的副词，那么也可以采用**负前向查找**的正则`happ(?!ily)`，就会匹配到`happy`单词的`happ`前缀。
+
+### 后向查找
+
+介绍完前向查找，接着我们再来介绍一下它的反向操作：后向查找(lookbehind)。后向查找(lookbehind)是通过指定一个子表达式，然后从符合这个子表达式的位置出发开始查找符合规则的字串。举个简单的例子： `apple`和`people`都包含`ple`这个后缀，那么如果我只想找到`apple`的`ple`，该怎么做呢？我们可以通过限制`app`这个前缀，就能唯一确定`ple`这个单词了。
+
+```
+/(?<=app)ple/
+复制代码
+```
+
+其中`(?<=regex)`的语法就是我们这里要介绍的后向查找。`regex`指代的子表达式会作为限制项进行匹配，匹配到这个子表达式后，就会继续向**后**查找。另外一种限制匹配是利用`(?<!regex)` 语法，这里称为**负后向查找**。与正前向查找不同的是，被指定的子表达式不能被匹配到。于是，在上面的例子中，如果想要查找`apple`的`ple`也可以这么写成`/(?<!peo)ple`。
+
+需要注意的，不是每种正则实现都支持后向查找。在javascript中是不支持的，所以如果有用到后向查找的情况，有一个思路是将字符串进行翻转，然后再使用前向查找，作完处理后再翻转回来。看一个简单的例子：
+
+```
+// 比如我想替换apple的ple为ply
+var str = 'apple people';
+str.split('').reverse().join('').replace(/elp(?=pa)/, 'ylp').split('').reverse().join('');
+复制代码
+```
+
+> ps: 感谢评论区提醒，从es2018之后，chrome中的正则表达式也支持反向查找了。不过，在实际项目中还需要注意对旧浏览器的支持，以防线上出现Bug。详情请查看http://kangax.github.io/compat-table/es2016plus/#test-RegExp_Lookbehind_Assertions
+
+最后回顾一下这部分内容：
+
+| 回溯查找   | 正则                   | 记忆方式                                                     |
+| ---------- | ---------------------- | ------------------------------------------------------------ |
+| 引用       | \0,\1,\2 和 $0, $1, $2 | 转义+数字                                                    |
+| 非捕获组   | (?:)                   | 引用表达式(()), 本身不被消费(?),引用(:)                      |
+| 前向查找   | (?=)                   | 引用子表达式(())，本身不被消费(?), 正向的查找(=)             |
+| 前向负查找 | (?!)                   | 引用子表达式(())，本身不被消费(?), 负向的查找(!)             |
+| 后向查找   | (?<=)                  | 引用子表达式(())，本身不被消费(?), 后向的(<，开口往后)，正的查找(=) |
+| 后向负查找 | (?<!)                  | 引用子表达式(())，本身不被消费(?), 后向的(<，开口往后)，负的查找(!) |
+
+### 逻辑处理
+
+
+
+计算机科学就是一门包含逻辑的科学。让我们回忆一下编程语言当中用到的三种逻辑关系，与或非。
+
+在正则里面，默认的正则规则都是**与**的关系所以这里不讨论。
+
+而**非**关系，分为两种情况：一种是字符匹配，另一种是子表达式匹配。在字符匹配的时候，需要使用`^`这个元字符。在这里要着重记忆一下：**只有在`[`和`]`内部使用的`^`才表示非的关系**。子表达式匹配的非关系就要用到前面介绍的前向负查找子表达式`(?!regex)`或后向负查找子表达式`(?<!regex)`。
+
+或关系，通常给子表达式进行归类使用。比如，我同时匹配a,b两种情况就可以使用`(a|b)`这样的子表达式。
+
+| 逻辑关系 | 正则元字符  |
+| -------- | ----------- |
+| 与       | 无          |
+| 非       | [^regex]和! |
+| 或       | \|          |
+
+### 正则表达式的Method( 在js中应用 )
+
+- reg.exec( )
+
+> reg.exec()每次调用，返回一个匹配的结果，匹配结果和分组以数组的形式返回，不断的调用即可返回下一个结果，直到返回`null`
+
+案例如下：
+
+```js
+
+var patt=/\d+/g
+var str="aaa123BBB456"
+console.log(patt.exec(str))
+console.log(patt.exec(str))
+console.log(patt.exec(str)) 
+```
+
+![image-20220508174951137](常见问题总结.assets/image-20220508174951137.png)
+
+---
+
+-  `str.replace()`
+
+> replace也是字符串的方法，它的基本用法是`str.replace(reg,replace|function)`，第一个参数是正则表达式，代表匹配的内容，第二个参数是替换的字符串或者一个回掉函数。
+
+**注意，replace不会修改原字符串，只是返回一个修改后的字符串;除此外，正则表达式如果没有使用`g`标志，也和`match`一样，只匹配/替换第一个**
+
+```js
+- 需求：替换一个序列中的元音字母(aeiou)，将其替换成一个double。 比如x->xx 
+- 注意，第二个参数必须是字符串; 注意不要忘记加g
+
+var s = "Hello,My name is Vincent."
+var result = s.replace(/([aeiou])/g,"$1$1")
+//"Heelloo,My naamee iis Viinceent."
+
+
+```
+
+**function函数的应用**：（将正则匹配到的数据，传入到函数中，执行对应逻辑后，再返回去）
+
+```js
+var s = "Hello,My name is Vincent. What is your name?"
+var newStr = s.replace(/\b\w{4}\b/g,replacer)
+console.log(newStr)
+function replacer(match) {
+    console.log(match);
+    return match.toUpperCase();
+}
+/*
+name
+What
+your
+name
+Hello,My NAME is Vincent. WHAT is YOUR NAME?
+*/
+
+```
+
+所以，函数的参数是匹配到的内容，返回的是需要替换的内容。好了，基本示例解释了基本用法，那么之前讨论的分组怎么办？如何实现分组呢？
+
+```js
+//分组
+function replacer(match,group1,group2) {
+    console.log(group1);
+    console.log(group2);
+}
+```
+
+---
+
+- `reg.test(str)`
+
+> 正则表达式本身有一个test的方法，这个方法只能测试是否包含，返回一个bool变量
+
+```js
+var r = /\d{3}/;
+var a = '123';
+var b = '123ABC';
+var c = 'abc';
+
+r.test(a)  //true
+r.test(b) //true
+r.test(c) //false
+
+// 其中a，b，c就是表示带验证的字符串
+```
+
+---
+
+- `str.match()`
+
+> 与test()不同，不只是返回bool变量，它会返回你所匹配到的内容
+
+```js
+var r = /compus/
+var reg = /\w+/g
+var s = "compus, I know something about you"
+console.log(r.test(s))    //true
+console.log(s.match(r) ); //["compus"]
+console.log(s.match(reg));    // ['compus', 'I', 'know', 'something', 'about', 'you']
+
+
+// 注意：match返回匹配的是第一个满足条件的内容，如果需要匹配多个，则需要再整个表达式后加g ( 表示全局匹配 )
+```
+
+---
+
+- `str.split`
+
+> 现在来到了更强的功能上，先说下split，我们知道split是将字符串按照某个字符分隔开，比如有以下一段话，需要将其分割成单词。
+
+```js
+result = s.split(/[,\s]+/);
+// ["unicorns", "and", "rainbows", "And", "Cupcakes"]
+
+```
+
+**单词的分割：**
+
+好了，拓展一下，实现一个段落的单词分割，一个正则表达式就是
+
+```js
+result = s.split(/[,.!?\s]+/)
+复制代码
+```
+
+当然，有个最简单的方法，我们可以这样去做
+
+```js
+result = s.split(/\W+/);
+复制代码
+```
+
+接着，如果我们想将一个段落的句子都分隔开，一个可以实现的表达式就是
+
+```js
+result = s.split(/[.,!?]+/)
+复制代码
+```
+
+最后，有一个小需求，就是在分割句子的同时，还想把相应的分隔符保留下来。
+
+```json
+var s = 
+"Hello,My name is Vincent. Nice to Meet you!What's your name? Haha."
+复制代码
+```
+
+这是一个小小的ponit，记住**如果想要保留分隔符，只要给匹配的内容分组即可**
+
+```js
+var result = s.split(/([.,!?]+)/)
+//["Hello", ",", "My name is Vincent", ".", " Nice to Meet you", "!", "What's your name", "?", " Haha", ".", ""]
+复制代码
+```
+
+可以看到，这样就会把分隔符也存储起来
 
 
 
 
+### 总结
+
+对于正则来说，符号之抽象往往让很多程序员却步。针对不好记忆的特点，我通过分类和联想的方式努力让其变得有意义。我们先从一对一的单字符，再到多对多的子字符串介绍，然后通过分组、回溯引用和逻辑处理的方式来构建高级的正则表达式。
+
+在最后，出个常用的正则面试题吧：请写出一个正则来处理数字千分位，如`12345`替换为`12,345`。请尝试自己推理演绎得出答案，而不是依靠搜索引擎:)。代码如下：
+
+```js
+    let str = '12345'
+    str=str.replace(/(\d{2})(?=\d{3})/,'$1,');
+```
 
 
 
+过一张图表来对正则表达式的基本进行一个回顾
 
+| single char                               | quantifiers(数量)             | position(位置)             |
+| ----------------------------------------- | ----------------------------- | -------------------------- |
+| \d 匹配数字                               | * 0个或者更多                 | ^一行的开头                |
+| \w  匹配word(数字、字母)                  | + 1个或更多，至少1个          | $一行的结尾                |
+| \W 匹配**非**word(数字、字母)             | ? 0个或1个,一个Optional       | \b 单词"结界"(word bounds) |
+| \s 匹配white space(包括空格、tab等)       | {min,max}出现次数在一个范围内 |                            |
+| \S 匹配**非**white space(包括空格、tab等) | {n}匹配出现n次的              |                            |
+| . 匹配任何，任何的字符                    |                               |                            |
 
+`[]`的作用，用英文表达就是"alternation",表达一个或的逻辑；
+
+`/[-.(]/` 在符号中的连字符`-`放在第一位表示连字符本身，如果放在中间，表示"从..到.."，比如`[a-z]`表示a-z
+
+`[.)]` 括号中的特殊符号不需要转义，就表示其本身
+
+```
+[^ab]` 括号中的`^`表示非，anythings except `a` and `b
+```
+
+`(a|b)`也可表示选择，但是它有更强大的功能....
 
 
 
@@ -770,7 +1214,7 @@ background-image:-webkit-linear-gradient(bottom,red,#ff5f60,#f0c41b);
  - height:100%  & height:inherd 有何区别
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/92197e98487f43baaf228e90ff24e589.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)
  -   ### 当内容超出盒子的宽度或者高度的时候，如何设置滚动条、滚动槽
- ![在这里插入图片描述](https://img-blog.csdnimg.cn/0f3af12f579c4cb3bcee1cacfcf802f9.png)
+     ![在这里插入图片描述](https://img-blog.csdnimg.cn/0f3af12f579c4cb3bcee1cacfcf802f9.png)
     ![在这里插入图片描述](https://img-blog.csdnimg.cn/8d13fe1e00144fceb28ceda1932ae28d.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAY3NuZF_kvK_kvKY=,size_20,color_FFFFFF,t_70,g_se,x_16)![在这里插入图片描述](https://img-blog.csdnimg.cn/ebf9450d43494329abc5278d5285b82c.png)
  -  ### 如何将页面手动滚动到最顶部？
  通过scrollTop即可实现，获取dom元素，然后修改其`scrollTop = 0;`
