--- a/docs/note/design/设计模式笔记.md
+++ b/docs/note/design/设计模式笔记.md
@@ -176,7 +176,39 @@ renderMap( sosoMap ); // 输出：开始渲染搜搜地图
 
 ### 封装
 
-封装：目的是为了将信息隐藏
+**封装：**指代 ‘ 任何形式的封装 ’，包括隐藏实现细节、设计细节、以及隐藏对象类型...
+
+> **封装细节：**封装使得内部变化对于外部来说，是不可见的，对象对自己的行为负责。其他对象不关心它的内部实现
+
+#### 封装数据
+
+由于javascript没有private、public、protected等关键字来提供不同的访问权限，所以只能通过依赖变量的作用域来实现封装特性，模拟出相同的效果
+
+除了es6提供的let外，一般可以通过函数来创建作用域：
+
+```js
+var myObject = (function(){
+    var __name = 'sven' //私有变量（private）
+    return {
+        getName:function(){
+        		return __name
+    	}
+    }
+})();
+
+console.log(myObject.getName())  // sven
+console.log(myObject.__name)  // undefined
+```
+
+另外值得一提的是：es6中可以通过`Symbol`创建私有属性
+
+#### 封装类型（暂不介绍）
+
+#### 封装变化（暂不介绍）
+
+### 原型模式和基于原型继承的Javascript对象系统
+
+在以类为中心的面向对象编程语言中，类和对象的关系可以想象成【铸模】 - 【铸件】的关系，对象总是从类中创建而来。
 
 
 
