--- a/docs/note/design/设计模式笔记.md
+++ b/docs/note/design/设计模式笔记.md
@@ -630,13 +630,300 @@ getName.call( obj1 ); // 输出: sven
 getName.call( obj2 ); // 输出: anne
 ```
 
-【2】
+【2】`Function.prototype.bind`
 
- 
+大部分高级浏览器都实现了内置的`Function.prototype.bind` 用来指定函数内部的this指向，即使没有，我们来模拟一个。
 
-  
+- 简单版本：
+
+```js
+  Function.prototype.bind = function (context) {
+    var self = this;
+    console.log(this,'this2');            // ƒ (input) {console.log(this.name,input);} 
+    console.log(context,'context');       // context
+    console.log(arguments,'arguments1');  // 0: {name: 'sven'}
+    return function () {
+      console.log(arguments,'arguments2'); //0: "chucheng"
+      return self.apply(context,arguments)  // 这里才是执行console.log(this.name)的地方
+    } 
+  }
+  var obj = {
+    name:'sven'
+  }
+
+  var func = function () {
+    console.log(this.name); //sven
+  }.bind(obj)
+
+  func('chucheng')
+
+  // 解析：
+  /* 
+    1 - 由于func是对f().bind(obj)的引用，所以func是一个匿名函数
+    2 - 当执行func时，实际上执行的是 self.apply(context,arguments)
+    3 - obj 传入形参context，其指定了context为func函数体内的this
+    4 - 把func看成一个有名函数，最后执行的是bind内部返回的函数
+    5 - func传入的函数，实际上是传递给return function(){} 的形参，也就是内部的arguments这个类数组元素
+  */
+
+
+```
+
+复杂版本：
+
+```js
+<script>
+  Function.prototype.bind = function () {
+    var self = this,
+    context = [].shift.call(arguments) //需要绑定的this上下文
+    args = [].slice.call(arguments) // 剩余参数转化成数组
+    return function () {
+      // 这里是最后真正执行的函数
+      return self.apply(context,[].concat.call(args,[].slice.call(arguments)))
+      // 执行新函数的时候，会把之前传入的context当做新函数体内的this
+      // 并且组合两次分别传入的参数，作为新函数的参数
+      // args 表示bind除了obj之外的参数 | arguments表示func中传入的实参
+    }
+  }
+  var obj = {
+    name:'sven'
+  }
+
+  var func = function (a,b,c,d) {
+    console.log(this.name); //sven
+    console.log([a,b,c,d]); //[1,2,3,4]
+  }.bind(obj,1,2)
+
+  func(3,4)
+
+</script>
+
+```
+
+
+
+ 【3】借用其他对象的方法
+
+  函数的参数列表`arguments`是一个类数组对象，虽然它有“ 下标 ”，但它并非真正的数组，所以也不能像数组一样，进行排序操作或者往集合里添加一个新的元素. 在这种情况下，我们常常会使用`Array.proptype`对象上的方法。
+
+比如我们想往`argument`中添加一个新的元素，通常会借用`Array.proptype.push`:
+
+```js
+
+(function(){
+    	Array.proptype.push.call(argument,3);
+    	console.log(arguments)   //输出[1,2,3]
+})(1,2)
+
+```
+
+想操作`argument`转城真正的数组的时候，我们经常非常频繁地找`Array.proptype`对象借用方法
+
+想把`arguments`转成真正的数组的时候，可以借用`Array.prototype.slice`方法。
+
+想截取`arguments`列表中的头一个元素时，可以借用`Array.prototype.shift`方法
 
   
 
   ​				
+
+## 闭包 、高阶函数
+
+### 闭包
+
+> 闭包的形成与`变量的作用域`以及`变量的生存周期`密切相关
+
+
+
+#### 变量的作用域
+
+概念：变量的有效范围 
+
+**情况1：**在函数中声明一个`var`变量，这时候的变量就是局部变量，只有在该函数内部才能访问到这个变量，在函数外部无法访问
+
+
+
+在javascript中，函数可以用来创造作用域，函数内部的变量对内可见、对外不可见
+
+搜索变量的路径：从内部往外找，直到搜索到全局对象为止，案例如下：
+
+```js
+
+var a = 1
+
+var func = function (){
+  var b = 2;
+  var func2 = function(){
+      var c = 3;
+      alert(b);  //2
+      alert(a);  //1
+  }
+  func2();
+  alert(c);    //  Uncaught ReferenceError :c is not defined
+};
+
+
+```
+
+---
+
+#### 变量生存周期
+
+|          | 生存周期            | 备注                       |
+| -------- | ------------------- | -------------------------- |
+| 全局变量 | 永久性              | 生命周期一直存在，除非销毁 |
+| 局部变量 | 函数调用结束 - 销毁 |                            |
+
+```js
+var fun = function () {
+    var a = 1;  // 退出函数后局部变量a 将被销毁
+    alert(a)  
+}
+```
+
+```js
+var fun = function(){
+    var a = 1;
+    return function(){
+        a++;
+        alert( a )
+    }
+}
+
+var f = func();
+```
+
+#### 闭包的更多作用
+
+- 封装变量
+
+> 闭包可以帮助把一些不需要暴露在全局的变量封装城 “ 私有变量 ” 
+
+```js
+
+ var mult = function(){
+     var a = 1;
+     for ( var i = 0 ;l = arguments.length;i<l; i++ ){
+         a = a* arguments[i]
+     }
+     return a
+ }
+
+```
+
+`mult`函数接受一些number类型的参数，并返回这些参数的乘积
+
+现在我们觉得对于那些相同参数来说，每次都进行计算是一种浪费，我们可以加入缓存机制来提高这个函数的性能；
+
+```js
+
+var cache = {};
+var mult = function(){
+    var args = Array.prototype.join.call(argument,',')
+    if(cache[ args ]){
+        return cache[ args ]
+    }
+    
+    var a = 1;
+    for ( var i = 0; l = arguments.length;i<l;i++ ){
+        a = a * arguments[i]
+    }
+    return cache[ args ] = a;
+}
+
+alert( mult(1,2,3) )   //6
+alert( mult(1,2,3) )   //6
+
+```
+
+---
+
+问题：由于cache这个变量仅仅在mult函数中被使用，与其让cache变量跟mult函数一起平行得暴露在全局作用域下，不如把它封闭在mult函数内部，这样可以减少页面中的全局变量，以避免这个变量被其他地方误操作而影响
+
+```js
+
+var mult = (function(){
+    var cache = {};
+ 	return function(){
+        var args = Array.prototype.join.call(argument,',')
+        if(cache[ args ]){
+            return cache[ args ]
+        }
+
+        var a = 1;
+        for ( var i = 0; l = arguments.length;i<l;i++ ){
+            a = a * arguments[i]
+        }
+        return cache[ args ] = a;
+    }
+})();
+ 
+
+```
+
+再优化
+
+```js
+
+
+var mult = (function(){
+    var cache = {};
+    var calculate = function(){
+        var a = 1;
+        for ( var i = 0; l = arguments.length;i<l;i++ ){
+            a = a * arguments[i]
+        }
+        return a;
+    },
+        
+ 	return function(){
+        var args = Array.prototype.join.call(argument,',')
+        if(cache[ args ]){
+            return cache[ args ]
+        }
+        return cache[ args ] = calculate.apply(null,arguments);
+    }
+})();
+ 
+
+
+```
+
+- 闭包的另外一个用途：延续局部变量的寿命
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
