add:新增记笔记

--- a/docs/note/problem/常见问题总结.md
+++ b/docs/note/problem/常见问题总结.md
@@ -1263,12 +1263,64 @@ Vue.prototype.$dayjs = dayjs;
 
 子组件通过`$emit`修改父组件的变量data
 
+## routerView知识小结
 
+在`route`配置项中，是有数组组成的，每一项表示该路由页面的路径、组件名称、组件本身、还有其子路由
 
+```js
+const routes = [
+  {
+    path: '/',
+    name: 'HomePage',
+    component: resolve => require(['@/views/panel/' + ((window.IS_DEMO !== undefined && window.IS_DEMO) ? 'Garden-iframe' : 'Garden')], resolve)
+  },
+  {
+    path: '/',
+    name: 'Index',
+    component: Dashboard,
+    children: [
+      {
+        path: '/floor',
+        name: 'floor',
+        component: resolve => require(['@/views/panel/Floor'], resolve)
+      },
 
+    ]
+  },
+  {
+    path: '/garden',
+    name: 'garden',
+    component: resolve => require(['@/views/panel/Garden'], resolve)
+  }
+]
 
+```
 
+在上述代码中，routes中的一级数据，显示在`<router-view></router-view>`当中，比如`homePage`显示在routerView中
 
+而二级路由，则显示在一级路由中对应的组件
+
+举例：
+
+```js
+  {
+    path: '/',
+    name: 'Index',
+    component: Dashboard,
+    children: [
+      {
+        path: '/floor',
+        name: 'floor',
+        component: resolve => require(['@/views/panel/Floor'], resolve)
+      },
+
+    ]
+  },
+```
+
+`Dashboard`是一级路由组件，而二级路由组件`floor`则显示在`Dashboard`对应的`<router-view></route-view>`当中
+
+![image-20220602182704455](常见问题总结.assets/image-20220602182704455.png)
 
 
 
