--- a/docs/note/计算机网络/计算机网络.md
+++ b/docs/note/计算机网络/计算机网络.md
@@ -10,15 +10,16 @@ tags:
 ---
 ## 基础知识
 
+
+
 ### 基础概念
 
 - 局域网：一个公司、一个家庭、一个学校······
 - 城域网：一个地区、一个城市······
 - 广域网：一个国家、全世界······
 
-
-
-
+![Dark](https://cdn.ttgtmedia.com/visuals/German/article/hacker-thief-laptop-fotolia.jpg)
+<!-- more -->
 
 最原始的计算机是：1  - 2  、 1 - 3 、 1 - 4 
 
