设计模式笔记

--- a/docs/note/design/设计模式笔记.md
+++ b/docs/note/design/设计模式笔记.md
@@ -914,6 +914,8 @@ var mult = (function(){
             return cache[ args ]
         }
         return cache[ args ] = calculate.apply(null,arguments);
+        // 也可以这么写： return cache[ args ] = calculate.call(null,...arguments);
+         // 注意，这里的的第一个参数如果是null，既指向全局对象
     }
 })();
  
@@ -923,6 +925,107 @@ var mult = (function(){
 
 - 闭包的另外一个用途：延续局部变量的寿命
 
+#### 高阶函数实现AOP
+
+- [b站的相关视频链接](https://www.bilibili.com/video/BV1ET4y1F7B9?spm_id_from=333.337.search-card.all.click) (高阶函数之AOP切片编程)
+
+>所谓的AOP就是在执行原业务逻辑的前后插入，2段代码逻辑，从而实现函数的动态植入
+>
+>```js
+>// 原来
+>fn()
+>
+>// 植入后
+>fn_before()
+>fn()
+>fn_after()
+>
+>```
+
+代码讲解过程：
+
+```js
+        Function.prototype.before = function (callback){
+            var _that = this
+            // 这里的this是谁，要看，是谁调用了before，由下面代码知道是fn调用了before，所以this = fn
+            return function(){
+                callback()
+                _that()
+            }
+        }
+		// fn 是有Function实例化之后的一个对象
+        var fn = function () {
+            console.log('最原始函数')
+        }
+        var newFn =  fn.before(()=>{
+            console.log('fn-之前执行')
+        })
+        
+        newFn()
+        // fn-之前执行
+        // 最原始函数
+```
+
+优化：
+
+```js
+        Function.prototype.before = function (beforeFn){
+            var _self = this
+            return function(){
+                beforeFn.apply(this,arguments)
+                return _self.apply(this,arguments)
+            }
+        }
+        var fn = function () {
+            console.log('最原始函数')
+        }
+        var newFn =  fn.before(()=>{
+            console.log('fn-之前执行')
+        })
+        newFn()
+        // fn-之前执行
+        // 最原始函数
+```
+
+在优化( 加入后置函数 )
+
+```js
+        Function.prototype.before = function (beforeFn){
+            var _self = this
+            return function(){
+                beforeFn.apply(this,arguments)
+                return _self.apply(this,arguments)
+            }
+        }
+        Function.prototype.after = function (afterFn){
+            var _self = this
+            // 注意：这里的this只带的是最后调用after
+            // 也就是执行完fn.before(()=>{})之后，调用的
+            // 而执行fn.before(()=>{})返回了一个function(){}
+            // 也就是最后返回的 function 调用了after，既this 就是 这个function 
+            /*  function(){
+                    beforeFn.apply(this,arguments)
+                    return _self.apply(this,arguments)
+            } */
+            return function(){
+                var ret = _self.apply(this,arguments)
+                afterFn.apply(this.arguments)
+                return ret
+            }
+        }
+        var fn = function () {
+            console.log('最原始函数')
+        }
+        var newFn =  fn.before(()=>{
+            console.log('fn-之前执行')
+        }).after(function(){
+            console.log('fn-之后执行')
+        })
+        newFn()
+        // fn-之前执行
+        // 最原始函数
+        // fn-之后执行
+```
 
 
 
@@ -934,6 +1037,81 @@ var mult = (function(){
 
 
 
+## 工厂模式
+
+在前端中，但项目需要大量创建对象的时候，我们可以借助工厂模式，将对象进行批量生产
+
+```js
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <script>
+      function Person(name) {
+        this.name = name;
+      }
+      Person.prototype.getName = function () {
+        console.log(this.name);
+      };
+
+      function Car(model) {
+        this.model = model;
+      }
+      Car.prototype.getModel = function () {
+        console.log(this.model);
+      };
+
+      function create(type, param) {
+         // 这里的this，如果是通过new进入的话，就指向new出来的对象
+         //            如果是通过普通函数调用，则this有可能指向window或者其他顶级对象
+          
+          
+        // return new this[type](param);
+        if (this instanceof create) {
+          //instanceof会判断后面的构造函数的原型，是不是存在在前面这个对象的原型链里
+          return new this[type](param);
+        } else {
+          return new create(type, param);
+        }
+      }
+      create.prototype = {
+        person: Person,
+        car: Car,
+      };
+
+      var person1 = new create("person", "zhang san");
+      var car1 = create("car", "Benz");
+
+      person1.getName(); //zhang san
+      car1.getModel(); //Benz
+
+      /*
+        new create('person','zhang san') ==> {
+          __proto__:create.prototype
+        }
+
+        person1 = new this[type](param) = new Person('zhang san') ==> {
+          __proto__:Person.prototype
+          name:'zhang san'
+        } 
+      */
+    </script>
+  </head>
+  <body></body>
+</html>
+
+```
+
+
+
+## 观察者模式
+
+`观察者模式`又叫做发布订阅模式或者消息模式，是设计模式中非常注明也是非常重要的一种模式。
+
+这种模式一般会定义一个主题和众多个体，这里可以想想城一个消息中心，里面有各种各样的消息，众多的个体可以订阅不同的消息，当未来消息中心发布某条消息的时候，订阅过他的个体就会得到通知。
 
 
 
@@ -941,9 +1119,123 @@ var mult = (function(){
 
 
 
+## 单例模式
+
+单例模式定义：保证一个类仅有一个实力，并且提供一个访问他的全局访问点。
+
+单例模式是一种常见的设计模式，有一些对象我们往往只需要一个，比如线程池、全局缓存、浏览器中的window对象等等。
+
+在javascript开发中，单例模式的用途非常广泛。试想一下，当我们单机登录按钮的时候，页面中会出现一个登录浮窗，而这个登录浮窗是唯一的，无论单机多少次登录按钮，这个浮窗都只会被穿件一次，name这个登录浮窗就适合用单例模式来创建。
+
+```js
+      // -------不安全-----------------------------
+      var _unique = null;
+
+      function createSingle() {
+        var obj = {
+          a: 1,
+        };
+        if (_unique === null) {
+          _unique = obj;
+        }
+        return _unique;
+      }
+
+      var a = createSingle();
+      //   _unique = null--不安全
+      var b = createSingle();
+
+      console.log(a === b); //true
+
+      // -------安全--------------------------------
+      var createSingle2 = (function () {
+        var _unique2 = null;
+        function single() {
+          return {
+            a: 1,
+          };
+        }
+        return function () {
+          if (_unique2 === null) {
+            _unique2 = single();
+          }
+          return _unique2;
+        };
+      })();
+
+      var a2 = createSingle2();
+      var b2 = createSingle2();
+      console.log(a2 === b2); //true
+
+```
 
 
 
+### 用代理实现单例模式 （★ 重点）
+
+```js
+var CreateDiv = function (html) {
+    this.html = html;
+    this.init()
+}
+
+CreateDiv.prototype.init = function(){
+    var div = document.createElement('div')
+    div.innerHTML = this.html;
+    document.body.appendChild(div)
+}
+
+// 引入代理类proxySingletonCreateDiv( 负责管理单例模式的逻辑类 )
+var ProxySingletonCreateDiv = (function(){
+    var instance;
+    return function (html){
+        if(!instance){
+            instance = new CreateDiv(html)
+        }
+        return instance
+    }
+})();
+
+
+var a = new ProxySingletonCreateDiv('sven1')
+var b = new ProxySingletonCreateDiv('sven2')
+
+alert(a===b) // true
+```
+
+
+
+### 通用的惰性单例
+
+我们把创建实例对象的职责、管理单例的职责分别放在两个方法
+
+```js
+
+    var getSingle = function(fn){
+        var result;
+        return function () {
+            console.log(this,'this'); // window 由于最后执行getSingle - return出去的函数的作用域是在window下
+            console.log(arguments,'arguments') // 1,2
+            return result || ( resule = fn.apply(this,arguments))
+        }
+    }
+
+    var createLoginLayer = function () {
+        var div = document.createElement('div')
+        div.innerHTML = '我是登录弹窗'
+        div.style.display = 'none'
+        document.body.appendChild(div)
+        return div
+    }
+
+    var createSingleLoginLayer = getSingle(createLoginLayer)
+    document.getElementById('loginBtn').onclick = function () {
+        console.log(this,'this1');
+        var loginLayer = createSingleLoginLayer(1,2);
+        loginLayer.style.display = 'block'
+        
+    }
+```
 
 
 
