--- a/docs/note/design/设计模式笔记.md
+++ b/docs/note/design/设计模式笔记.md
@@ -377,7 +377,11 @@ document.getElementById( 'div1' ).onclick = function(){
 
 ---
 
-  
+  原型链图：
+
+![image-20220720233320326](设计模式笔记.assets/image-20220720233320326.png)
+
+![image-20220720233406215](设计模式笔记.assets/image-20220720233406215.png)
 
 ### 丢失的this
 
@@ -1025,6 +1029,46 @@ var mult = (function(){
         // fn-之前执行
         // 最原始函数
         // fn-之后执行
+```
+
+#### 高阶函数的其他应用
+
+函数柯里化`currying`
+
+一个函数首先会接收一些参数，接收这些参数之后，该函数并不会立即求值，而是立即返回另外一个函数，刚才传入的参数在函数形成的闭包中被保存起来。待到函数真正需要求值的时候，之前传入的所有参数都会被一次性用于求值。
+
+```js
+
+	var currying = function (fn) {
+        var args = []
+        return function (){
+            if(arguments.length === 0 ){
+                return fn.apply(this,args)
+            }else {
+                [].push.apply(args,arguments)
+                return argumtns.callee;
+            }
+        }
+    }
+    
+    var cost = (function (){
+        var money = 0 ;
+        
+        returen function (){
+            for (var i = 0; l<arguments.length; i<l;i++) {
+                money += arguments[i]
+            }
+            return money
+        }
+    })();
+
+	var cost = currying(cost)
+	cost(100)	// 未真正求值
+	cost(200)   // 未真正求值
+	cost(300)   // 未真正求值
+
+	cost()  // 求值并输出 ：600
+
 ```
 
 
