--- a/docs/note/design/设计模式笔记.md
+++ b/docs/note/design/设计模式笔记.md
@@ -1157,9 +1157,204 @@ var mult = (function(){
 
 这种模式一般会定义一个主题和众多个体，这里可以想想城一个消息中心，里面有各种各样的消息，众多的个体可以订阅不同的消息，当未来消息中心发布某条消息的时候，订阅过他的个体就会得到通知。
 
+**那什么是观察者模式那？** 当对象之间存在一对多的依赖关系时，其中一个对象的状态发生改变，所有依赖它的对象都会收到通知，这就是观察者模式。
 
+---
 
+### 故事背景
 
+前端宗门自从发布了传承方案后，宗门日渐繁荣，弟子们的水平不断提高，但新的问题出现了——高质量任务严重不足。宗门任务大殿每个月发布的五星任务是有限的，想要接取五星任务的弟子却如过江之鲫，于是滋生了**武侠黄牛**，恶意抢任务，坐地起价。
+
+宗门不愿任务被恶意哄抢，决定调整任务市场秩序，因此推出任务订阅功能——观察者模式。
+
+### 观察者模式
+
+任务订阅的大致功能是这样的: 宗门推出五星任务订阅功能，弟子通过购买获得订阅权限，当宗门发布五星任务后，会通知拥有订阅权限的弟子。
+
+那么任务订阅功能中有两类主体:
+
+- 宗门任务大殿
+  - 维护拥有订阅权限的弟子列表
+  - 提供弟子购买订阅权限的功能
+  - 发布对应任务后通知有订阅权限的弟子
+- 接受任务通知的弟子们
+
+上面宗门任务大殿与弟子间的关系其实就构成了一个观察者模式。
+
+**那什么是观察者模式那？** 当对象之间存在一对多的依赖关系时，其中一个对象的状态发生改变，所有依赖它的对象都会收到通知，这就是观察者模式。
+
+在观察者模式中，只有两种主体：目标对象 (`Object`) 和 观察者 (`Observer`)。宗门任务大殿就是目标对象，弟子们就是观察者。
+
+- 目标对象 
+
+  ```
+  Subject
+  ```
+
+  :
+
+  - 维护观察者列表 `observerList` ———— 维护拥有订阅权限的弟子列表
+  - 定义添加观察者的方法 ———— 提供弟子购买订阅权限的功能
+  - 当自身发生变化后，通过调用自己的 `notify` 方法依次通知每个观察者执行 `update` 方法 ———— 发布对应任务后通知有订阅权限的弟子
+
+- 观察者 `Observer` 需要实现 `update` 方法，供目标对象调用。`update`方法中可以执行自定义的业务逻辑 ———— 弟子们需要定义接收任务通知后的方法，例如去抢任务或任务不适合，继续等待下一个任务
+
+我们把上面的文字形象化一下:
+
+![Observer.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/1f96a826bb7945dd96f9696f41b45534~tplv-k3u1fbpfcp-zoom-in-crop-mark:3024:0:0:0.awebp?)
+
+```js
+class Observer {
+    constructor(name) {
+        this.name = name;
+    }
+    update({taskType, taskInfo}) {
+        // 假设任务分为日常route和战斗war
+        if (taskType === "route") {
+            console.log(`${this.name}不需要日常任务`);
+            return;
+        }
+        this.goToTaskHome(taskInfo);
+        
+    }
+    goToTaskHome(info) {
+        console.log(`${this.name}去任务大殿抢${info}任务`);
+    }
+}
+
+class Subject {
+    constructor() {
+        this.observerList = []
+    }
+    addObserver(observer) {
+        this.observerList.push(observer);
+    }
+    notify(task) {
+        console.log("发布五星任务");
+        this.observerList.forEach(observer => observer.update(task))
+    }
+}
+
+const subject = new Subject();
+const stu1 = new Observer("弟子1");
+const stu2 = new Observer("弟子2");
+
+// stu1 stu2 购买五星任务通知权限
+subject.addObserver(stu1);
+subject.addObserver(stu2);
+
+// 任务殿发布五星战斗任务
+const warTask = {
+    taskType: 'war',
+    taskInfo: "猎杀时刻"
+}
+
+// 任务大殿通知购买权限弟子
+subject.notify(warTask);
+
+// 任务殿发布五星日常任务
+const routeTask = {
+    taskType: 'route',
+    taskInfo: "种树浇水"
+}
+
+subject.notify(routeTask);
+
+```
+
+输出结果:
+
+```js
+// 战斗任务
+发布五星任务
+弟子1去任务大殿抢猎杀时刻任务
+弟子2去任务大殿抢猎杀时刻任务
+
+// 日常任务
+发布五星任务
+弟子1不需要日常任务
+弟子2不需要日常任务
+复制代码
+```
+
+通过上面代码我们可以看到，当宗门发布任务后，订阅的弟子(观察者们)都会收到任务最新通知。
+
+看到这里，不知道你可以理解观察者模式了？
+
+**小包再给举个栗子**: 比如你要应聘阿里巴巴的前端工程师，结果阿里巴巴 HR 告诉你没坑位了，留下你的电话，等有坑位联系你。于是，你美滋滋的留下了联系方式。殊不知，HR 已经留下了好多联系方式。好在 2022 年 2 月 30 号那天，阿里巴巴有了前端工程师的坑位，HR 挨着给留下的联系方式联系了一通。
+
+案例中阿里巴巴就是目标对象 `Subject` ，联系方式列表就是用来维护观察者的 `observerList` ，根据前端职位的有无来调用 `notify` 方法。
+
+- [参考链接](https://juejin.cn/post/7055441354054172709)
+
+## 发布订阅模式
+
+所谓发布订阅模式，是在观察者基础上，在发布者和订阅者之间添加了一个中间层，这个中间者就是发布者与订阅者之间的联系的桥梁
+
+> - 发布者：满足条件时，通过消息中心发布消息
+> - 消息中心：负责存储消息与订阅者的对应关系，有消息触发时，负责通知订阅者 [ 中转站 ]
+> - 订阅者：去消息中心订阅自己感兴趣的消息
+
+```js
+        // 把订阅发布功能封装成一个对象
+         let event = {
+            clientList:[],
+            // 订阅消息
+            listen:function (key,fn) { 
+                console.log(this,'this');
+                if(!this.clientList[key]) {
+                    this.clientList[key] = []
+                }
+                this.clientList[key].push(fn)
+            },
+            // 发布消息
+            trigger:function () {
+                var key = Array.prototype.shift.call(arguments)
+                fns = this.clientList[key]
+                if(!fns || fns.lenght == 0 ){
+                    return false
+                }
+                for (var i = 0;i < fns.length; i++ ){
+                    console.log(arguments,'arguments');
+                    fns[i].apply(this,arguments)
+                }
+            },
+            // 取消订阅
+            remove:function(key,fn){
+                var fns = this.clientList[key]
+                if(!fns) return false
+                if(!fn){ fns && (fns.length = 0) }
+                else {
+                    for(var l = fns.lenght -1;l>=0;l--){
+                        var _fn = fns[l]
+                        if(_fn===fn) fns.splice(l,1)
+                    }
+                }
+            }
+            
+         }
+
+         let obj = {}
+         // 新对象可通过installEvent 便可以把发布订阅的方法，添加到自己身上
+         let installEvent = function (obj) {
+                for (var i in event){
+                    obj[i] = event[i]
+                }
+         }
+         installEvent(obj)
+         // 订阅square50的消息（50平方的价格动态信息），回调函数接收发布者，发布的价格数据
+         obj.listen('square50',(price)=>{
+                console.log('square50   ',price);
+         })
+
+         obj.listen('square100',(price)=>{
+                console.log('square100   ',price);
+         })
+
+         // 发布者：发布相关订阅频道所需数据给订阅者
+         
+         obj.trigger('square50',100000)
+```
 
 
 
@@ -1283,16 +1478,234 @@ alert(a===b) // true
 
 
 
+## 策略模式
+
+策略模式是一种行为设计模式，定义一系列算法，将每一个算法封装起来，并让它们可以相互替换。策略模式让算法独立于使用它的客户而变化，也称为政策模式（Policy）。
+
+假如正在开发一个在线商城的项目，每个产品都有原价，称之为 `originalPrice`。但实际上并非所有产品都以原价出售，可能会推出允许以折扣价出售商品的促销活动。
+
+商家可以在后台为产品设置不同的状态，然后实际售价将根据产品状态和原价动态调整。
+
+具体规则如下：
+
+- **部分产品已预售**：为鼓励客户预订，将在原价基础上享受 `20%` 的折扣。
+- **部分产品处于正常促销阶段**：如果原价低于或等于`100`，则以`10%`的折扣出售；如果原价高于 `100`，则减 `10` 元。
+- **有些产品没有任何促销活动**：它们属于 `default` 状态，并以原价出售。
+
+这时需要写一个获取商品价格的函数 `getPrice` ，应该怎么写呢？
+
+```javascript
+function getPrice(originalPrice, status) {
+    // ...
+    // 返回价格;
+}
+```
+
+事实上，面对这样的问题，如果不考虑任何设计模式，最直观的写法可能 `if-else` 多次条件判断语句来计算价格。
+
+有三种状态，可以快速编写如下代码：
+
+```js
+function getPrice(originalPrice, status) {
+    if (status === "pre-sale") {
+        return originalPrice * 0.8;
+    }
+
+    if (status === "promotion") {
+        if (origialPrice <= 100) {
+            return origialPrice * 0.9;
+        } else {
+            return originalPrice - 20;
+        }
+    }
+
+    if (status === "default") {
+        return originalPrice;
+    }
+}
+```
+
+有三个条件，上面的代码写了三个 `if` 语句，这是非常直观的代码，但是这段代码组织上不好。
+
+首先，它违反了单一职责原则（Single responsibility principle，规定每个类或者函数都应该有一个单一的功能，并且该功能应该由这个类或者函数完全封装起来）。函数 `getPrice` 做了太多的事情，这个函数不易阅读，也容易出现 `bug` 。如果一个条件出现 `bug` ，整个函数就会崩溃。同时，这样的代码也不容易调试。
+
+并且这段代码很难应对变化的需求，这时就需要考虑设计模式，其往往会在业务逻辑发生变化时展现出它的魅力。
+
+假设业务扩大了，现在还有另一个折扣促销：黑色星期五。折扣规则如下：
+
+- 价格低于或等于 100 元的产品以 20% 的折扣出售。
+- 价格高于 100 元但低于 200 元的产品将减少 20 元。
+- 价格高于或等于 200 元的产品将减少 20 元。
+
+这个时候该怎么扩展 `getPrice`  函数呢？
+
+看起来必须在 `getPrice` 函数中添加一个条件语句：
+
+```js
+function getPrice(originalPrice, status) {
+    if (status === "pre-sale") {
+        return originalPrice * 0.8;
+    }
+
+    if (status === "promotion") {
+        if (origialPrice <= 100) {
+            return origialPrice * 0.9;
+        } else {
+            return originalPrice - 20;
+        }
+    }
+    // 黑色星期五规则
+    if (status === "black-friday") {
+        if (origialPrice >= 100 && originalPrice < 200) {
+            return origialPrice - 20;
+        } else if (originalPrice >= 200) {
+            return originalPrice - 50;
+        } else {
+            return originalPrice * 0.8;
+        }
+    }
+
+    if (status === "default") {
+        return originalPrice;
+    }
+}
+```
+
+每当增加或减少折扣时，都需要更改函数。这种做法违反了开闭原则（对扩展开放，对修改关闭）。修改已有的功能很容易出现新的错误，而且还会使得 `getPrice` 越来越臃肿。
+
+那么如何优化这段代码呢？
+
+首先，可以拆分这个函数 `getPrice`  以减少臃肿。
+
+```js
+/**
+ * 预售商品价格规则
+ * @param {*} origialPrice
+ * @returns
+ */
+function preSalePrice(origialPrice) {
+    return originalPrice * 0.8;
+}
+/**
+ * 促销商品价格规则
+ * @param {*} origialPrice
+ * @returns
+ */
+function promotionPrice(origialPrice) {
+    if (origialPrice <= 100) {
+        return origialPrice * 0.9;
+    } else {
+        return originalPrice - 20;
+    }
+}
+/**
+ * 黑色星期五促销规则
+ * @param {*} origialPrice
+ * @returns
+ */
+function blackFridayPrice(origialPrice) {
+    if (origialPrice >= 100 && originalPrice < 200) {
+        return origialPrice - 20;
+    } else if (originalPrice >= 200) {
+        return originalPrice - 50;
+    } else {
+        return originalPrice * 0.8;
+    }
+}
+/**
+ * 默认商品价格
+ * @param {*} origialPrice
+ * @returns
+ */
+function defaultPrice(origialPrice) {
+    return origialPrice;
+}
+
+function getPrice(originalPrice, status) {
+    if (status === "pre-sale") {
+        return preSalePrice(originalPrice);
+    }
+
+    if (status === "promotion") {
+        return promotionPrice(originalPrice);
+    }
+
+    if (status === "black-friday") {
+        return blackFridayPrice(originalPrice);
+    }
+
+    if (status === "default") {
+        return defaultPrice(originalPrice);
+    }
+}
+复制代码
+```
+
+经过这次修改，虽然代码行数增加了，但是可读性有了明显的提升。`getPrice` 函数显然没有那么臃肿，写单元测试也比较方便。
+
+但是上面的改动并没有解决根本的问题：代码还是充满了 `if-else` ，而且当增加或者减少折扣规则的时候，仍然需要修改 `getPrice`。
+
+其实使用这些 `if-else` 的目的就是为了对应状态和折扣策略。
+
+![促销规则.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/da2a7774bd6244df8f2dd59541666f6c~tplv-k3u1fbpfcp-zoom-in-crop-mark:3024:0:0:0.awebp?)
+
+从图中可以发现，这个逻辑本质上是一种映射关系：产品状态与折扣策略的映射关系。
+
+可以使用映射而不是冗长的 `if-else` 来存储映射，按照这个思路可以构造一个价格策略的映射关系（策略名称与其处理函数之间的映射），如下：
+
+```arduino
+const priceStrategies = {
+    "pre-sale": preSalePrice,
+    promotion: promotionPrice,
+    "black-friday": blackFridayPrice,
+    default: defaultPrice,
+};
+复制代码
+```
+
+将状态与折扣策略结合起来，价格函数就可以优化成如下：
+
+```lua
+function getPrice(originalPrice, status) {
+    return priceStrategies[status](originalPrice);
+}
+复制代码
+```
+
+这时候如果需要加减折扣策略，不需要修改函数，只需要修改价格策略映射关系 `priceStrategies`
+
+之前的代码逻辑如下：
+
+![image-20220923150337668](assets/image-20220923150337668.png)
+
+优化后的代码逻辑如下：
+
+![image-20220923150601714](assets/image-20220923150601714.png)
+
+以上的优化策略就是使用了设计模式之策略模式，在实际的项目开发过程中还是比较实用。
+
+> 在什么情况下可以考虑使用策略模式呢？如果函数具有以下特征：
+
+- 判断条件很多
+- 各个判断条件下的代码相互独立
+
+然后可以将每个判断条件下的代码封装成一个独立的函数，然后建立判断条件和具体策略的映射关系。
 
 
 
 
 
+# 设计模式原则
+
+## 单一职责
 
 
 
 
 
+## 开放、封闭原则
 
 
-https://bimface.com/developer-jsdemo#1040
+
+
+
